# libFreeDomeVision

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_MULTIPLATFORM.md  build_all.sh  build_all_platforms.sh  build_android.sh  build_avrora.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.bat
.cloudflared/cert/: cert_com.pem  cert_in.pem  cert_net.pem  cert_ru.pem  cert_us.pem
.cloudflared/tun/: tun_cn-com.json  tun_com.json  tun_in-com.json  tun_in.json  tun_net.json  tun_ru-com.json  tun_ru.json  tun_us.json  tun_www-in.json  tun_www-net.json  tun_www-ru.json
.github/workflows/: build.yml  gitbook.yml
build_lubomir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_macos/: CMakeCache.txt  CTestTestfile.cmake  Makefile  anantadigitalConfig.cmake  audio_playback_demo  cmake_install.cmake  libanantadigital_core.2.1.0.dylib  libanantadigital_core.2.dylib  libanantadigital_core.dylib
build_scripts/: build_all_platforms.sh  build_android.sh  build_avrora.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh
cmake/: anantadigital.pc.in  anantadigitalConfig.cmake.in  freedomevision.pc.in
cmake/toolchains/: android.toolchain.cmake  avrora.toolchain.cmake  ios.toolchain.cmake  windows-mingw.toolchain.cmake
debian/: changelog  control  rules
docs/classic_formats/: COLLADA_FORMAT.md  COMIC_FORMAT.md  UNREAL_FORMATS.md
docs/formats/: BORANKO_FORMAT.md  FORMAT_BORANKO_MARKETING.md  ZELIM_FORMAT.md  boranko.md  zelim.md
docs/gitbook/: README.md  SUMMARY.md
docs/gitbook/core-concepts/: README.md  anantasound.md  lyubomir-understanding.md  quantum-geometry.md
docs/gitbook/for-artists/: README.md
docs/gitbook/for-developers/: README.md
docs/gitbook/formats/: README.md  daga.md
docs/gitbook/getting-started/: README.md  running-the-demo.md
docs/quantum/: PRISM_TECHNOLOGY.md  QUANTUM_CONTENT.md  QUANTUM_PHYSICS.md  QUANTUM_TECHNOLOGIES.md
examples/: anantadigital_demo.cpp  audio_playback_demo.cpp  format_gpu_demo.cpp  lubomir_understanding_demo.cpp  quantum_acoustic_demo.cpp
gitbook/: README.md  building.md  changelog.md  examples.md  features.md  requirements.md
letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/339686e0e05cd4a96114f6f98346f92e/: meta.json  private_key.json  regr.json
letsencrypt/archive/saijay.net/: cert1.pem  fullchain1.pem  privkey1.pem
letsencrypt/csr/: 0000_csr-certbot.pem
letsencrypt/live/saijay.net/: cert.pem  chain.pem  fullchain.pem  privkey.pem
letsencrypt/renewal/: saijay.net.conf
nginx/: .htpasswd
samples/: test_sample.flac  Звук Говно - Бьянка.flac
src/: anantadigital_core.cpp  anantadigital_core.hpp  anantadigital_types.hpp  consciousness_hybrid.cpp  consciousness_hybrid.hpp  consciousness_integration.cpp  consciousness_integration.hpp  dome_acoustic_resonator.cpp  dome_acoustic_resonator.hpp  format_handler.cpp  format_handler.hpp  freedomevision_core.hpp  freedomevision_types.hpp  gpu_processor.cpp  gpu_processor.hpp  interference_field.cpp  interference_field.hpp  lubomir_understanding.cpp  lubomir_understanding.hpp  quantum_feedback_system.cpp  quantum_feedback_system.hpp
tests/: test_anantadigital_core.cpp  test_consciousness.cpp  test_consciousness_integration.cpp  test_freedomevision_core.cpp  test_lubomir_understanding.cpp  test_quantum_feedback.cpp
toolchains/: android-toolchain.cmake  avrora-toolchain.cmake  ios-toolchain.cmake
